--- a/ModifierSourceGenerator/ModifierSourceGenerator.csproj
+++ b/ModifierSourceGenerator/ModifierSourceGenerator.csproj
@@ -1,16 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <LangVersion>10.0</LangVersion>
-    <IsRoslynComponent>true</IsRoslynComponent>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <LangVersion>10.0</LangVersion>
+        <NoWarn>$(NoWarn);CS1591</NoWarn>
+        <IsRoslynComponent>true</IsRoslynComponent>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.1" />
-  </ItemGroup>
+        <!-- does not need runtime self -->
+        <IncludeBuildOutput>false</IncludeBuildOutput>
+        <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
+        <IncludeSymbols>false</IncludeSymbols>
+        <DevelopmentDependency>true</DevelopmentDependency>
+    </PropertyGroup>
 
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy /y &quot;$(OutDir)ModifierSourceGenerator.dll&quot; &quot;$(ProjectDir)..\Assets\MyLibrary\ModifierSourceGenerator.dll&quot;" />
-  </Target>
+    <ItemGroup>
+        <!-- Create nuget package as analyzer -->
+        <None Include="$(OutputPath)/$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.1" />
+    </ItemGroup>
+
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+        <Exec Command="copy /y &quot;$(OutDir)ModifierSourceGenerator.dll&quot; &quot;$(ProjectDir)..\Assets\MyLibrary\ModifierSourceGenerator.dll&quot;" />
+    </Target>
 </Project>
